--- a/ui/index.html
+++ b/ui/index.html
@@ -8,9 +8,12 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div class="left text-big bold">
             Hi! I am your webapp.
         </div>
+        <div class="left text-big bold">
+            I created this  webapp.
+            </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
