[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,10 +8,10 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="left text-big bold">
+        <div class="center text-big bold">
             Hi! I am your webapp.
         </div>
-        <div class="center text-small">
+        <div class="left text-small italic">
             I created this  webapp.
             </div>
         <script type="text/javascript" src="/ui/main.js">
