--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         <div class="center text-big bold">
             Hi! I am your webapp.
         </div>
-        <div class="left text-small italic underline">
+        <div class="left text-small italic oblique">
             I created this  webapp.
             </div>
         <script type="text/javascript" src="/ui/main.js">
