[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,15 +5,13 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="https://fbcdn-photos-d-a.akamaihd.net/hphotos-ak-xft1/v/t1.0-0/p206x206/1934178_615806888558578_4186962414984912194_n.jpg?oh=4af823548266083a54844843e50356a3&oe=583958DD&__gda__=1483695682_76526cad077c0b7dd47d39bdee66d610" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
             Hi! I am your webapp.
         </div>
-        <div class="left text-small italic oblique">
-            I created this  webapp.
-            </div>
+        
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
