[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="https://fbcdn-photos-d-a.akamaihd.net/hphotos-ak-xft1/v/t1.0-0/p206x206/1934178_615806888558578_4186962414984912194_n.jpg?oh=4af823548266083a54844843e50356a3&oe=583958DD&__gda__=1483695682_76526cad077c0b7dd47d39bdee66d610" class="img-medium"/>
+            <img src="https://scontent-sin6-1.xx.fbcdn.net/t31.0-8/p960x960/10296219_615806751891925_1976497692377474256_o.jpg" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
