[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,8 +8,8 @@
             <img src="https://scontent-sin6-1.xx.fbcdn.net/t31.0-8/p960x960/10296219_615806751891925_1976497692377474256_o.jpg" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
-            Hi! I am your webapp.
+        <div class="center">
+            Tarun Goenka
         </div>
         
         <script type="text/javascript" src="/ui/main.js">
