[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center">
-            Tarun Goenka
+           <p> Tarun Goenka</p>
         </div>
         
         <script type="text/javascript" src="/ui/main.js">
