[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,9 +9,9 @@
         </div>
         <br>
         <div class="center">
-           
+         Tarun Goenka   
         </div>
-        <p> Tarun Goenka</p>
+        
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
